# bvd_agent_based_model

./: .gitignore  AdvancedOutput.cpp  BVD_Random_Number_Generator.cpp  Breeding_module_parameter_gnu.cpp  CMakeLists.txt  CommandlineOptions.h  Cow.cpp  FarmManager.cpp  HDF5Handler.h  Herd.cpp  Herd.h  Initializer.h  Makefile  Makefile.am  Makefile.in  Readme.md  SmallFarmManager.h  Small_One_Herd_Farm.cpp  System.cpp  config.h  config.h.in  config.status  configure  configure.in  time_of_abortion_due_to_infection.cpp
.svn/: wc.db
autom4te.cache/: output.3  requests  traces.0  traces.1  traces.2  traces.3
doc/: Open_questions.org  README.org  README.txt  installLinuxManual  installMacManual
include/: BVDContainmentStrategy.h  BVDSettings.h  BVD_Random_Number_Generator.h  CSVFileHandler.h  CSV_Reader.h  Cow.h  CowWellFarm.h  CowWellFarmManager.h  Events.h  Farm.h  FarmManager.h  FileHandler.h  HDF5Handler.h  Market.h  OutputTable.h  SQLiteHandler.h  SimpleFarmManager.h  Simple_One_Herd_Farm.h  SlaughterHouseManager.h  Small_One_Herd_Farm.h  System.h  TableBasedOutput.h  Utilities.h  tableBasedOutput.h
iniFiles/: Test.ini  example.ini  pascalTest.ini  test.html  unitTestCow.ini
pythonScripts/: README.txt  allSystemBehavior.py  betterStat.py  csvTools.py  getPIStatistics.py  interActivationTime.py  meanLifeTime.py  outputSpecification.py  plotCSV.py  plotFullTradeMatrix.py  plotGlobalEndemicBehaviour.py  plotTradingAgeWrappe.sh  plotTransients.py  produceJoernsOutput.py  readAllCsvFiles.py  testOneHerdFarm.py  tradingAnalysis.py
pythonScripts/BVDDataAnalyzer/: SimulationAnalyzer.py  SimulationFile.py  __init__.py  outputSpecification.py
pythonScripts/iPython Notebooks/: FLI_output.ipynb  Untitled.ipynb
pythonScripts/iPython Notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  firstTest-checkpoint.ipynb
src/: AdvancedOutput.cpp  BVDContainmentStrategy.cpp  BVDOptions.cpp  BVDSettings.cpp  BVD_Random_Number_Generator.cpp  BVD_Random_Number_Generator_dummy.cpp  Breeding_module_parameter_gnu.cpp  CSVFileHandler.cpp  Cow.cpp  CowWellFarm.cpp  CowWellFarmManager.cpp  Events.cpp  Farm.cpp  FarmManager.cpp  FileHandler.cpp  HDF5Handler.cpp  Herd.cpp  Initializer.cpp  Market.cpp  Output.cpp  OutputTable.cpp  SQLiteHandler.cpp  SimpleFarmManager.cpp  Slaughterhouse.cpp  System.cpp  TableBasedOutput.cpp  TradeFilter.cpp  Utilities.cpp  programm.cpp  tableBasedOutput.cpp
tests/: test_cow.cpp  test_csv_reader.cpp  test_event.cpp  test_herd.cpp  test_initializer.cpp  test_output.cpp  test_system.cpp  tests.cpp
